service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-svc
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: playground
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
