ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ingress
  namespace: dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.middlewares: dev-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dev.192.168.56.110.nip.io
    secretName: iot-cert
  rules:
  - host: dev.192.168.56.110.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground-svc
            port:
              number: 8888
